@@ -1,7 +1,7 @@
 # from the shared flavor
 debian/install/shared/etc/gtk-@APIVER@/im-multipress.conf etc/gtk-@APIVER@
 debian/install/shared/usr/bin/gtk-query-immodules-3.0 @LIBDIR@/@SHARED_PKG@
-debian/install/shared/usr/bin/gtk-update-icon-cache-3.0 @LIBDIR@/@SHARED_PKG@
+debian/install/shared/usr/bin/gtk-update-icon-cache @LIBDIR@/@SHARED_PKG@
 debian/install/shared/@MODULES_BASE_PATH@/immodules/*.so @MODULES_BASE_PATH@/immodules
 debian/install/shared/@MODULES_BASE_PATH@/printbackends/*.so @MODULES_BASE_PATH@/printbackends
 debian/install/shared/@LIBDIR@/libgtk*.so.* @LIBDIR@
