@@ -1,4 +1,4 @@
 # from the shared flavor
-docs/reference/gtk/gtk-update-icon-cache-@APIVER@.1 usr/share/man/man1
+docs/reference/gtk/gtk-update-icon-cache.1 usr/share/man/man1
 docs/reference/gtk/gtk-query-immodules-@APIVER@.1 usr/share/man/man1
 debian/update-icon-caches usr/sbin
