@@ -1,5 +1,5 @@
 @LIBDIR@/@SHARED_PKG@/gtk-query-immodules-@APIVER@ usr/bin/gtk-query-immodules-@APIVER@
-@LIBDIR@/@SHARED_PKG@/gtk-update-icon-cache-@APIVER@ usr/bin/gtk-update-icon-cache-@APIVER@
+@LIBDIR@/@SHARED_PKG@/gtk-update-icon-cache usr/bin/gtk-update-icon-cache-@APIVER@
 usr/share/doc/@COMMON_PKG@/changelog.gz usr/share/doc/@BIN_PKG@/changelog.gz
 usr/share/doc/@COMMON_PKG@/NEWS.gz usr/share/doc/@BIN_PKG@/NEWS.gz
 usr/share/doc/@COMMON_PKG@/README.gz usr/share/doc/@BIN_PKG@/README.gz
