@@ -1,5 +1,5 @@
 # from the shared flavor
-debian/install/shared/usr/bin/gtk-builder-convert-3.0 usr/bin
+debian/install/shared/usr/bin/gtk-builder-convert usr/bin
 debian/install/shared/usr/include/gtk* usr/include
 debian/install/shared/@LIBDIR@/libg?k*.la @LIBDIR@
 debian/install/shared/@LIBDIR@/libg?k*.so @LIBDIR@
