@@ -1,1 +1,1 @@
-docs/reference/gtk/gtk-builder-convert-3.0.1
+docs/reference/gtk/gtk-builder-convert.1
