@@ -35,6 +35,10 @@ gtk+3.0 (2.99.0-1) UNRELEASED; urgency=low
       - Refreshed.
     + debian/libgtk3.0-0.symbols:
       - Updated.
+    + debian/libgtk3.0-*.{install.in,manpages},
+      debian/rules:
+      - Install manpages and binaries with the -3.0 suffix as upstream has
+        stopped doing so.
   * Switch to CDBS' flavours system.
 
  -- Emilio Pozuelo Monfort <pochu@debian.org>  Sun, 02 Jan 2011 20:08:53 +0000
